# compiler-project

./: .gitignore  README.md  generate_expected.py  pyproject.toml
docs/: language_spec.md
examples/: hello.src
src/lexer/: __main__.py  scanner.py  tokens.py
tests/: test_runner.py
tests/lexer/invalid/: test_invalid_char.src  test_invalid_char.txt  test_malformed_number.src  test_malformed_number.txt  test_unterminated_comment.src  test_unterminated_comment.txt  test_unterminated_string.src  test_unterminated_string.txt
tests/lexer/valid/: test_comments.src  test_comments.txt  test_identifiers.src  test_identifiers.txt  test_keywords.txt  test_numbers.src  test_numbers.txt  test_operators.src  test_operators.txt
