[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MiniCompiler"
version = "0.1.0"
description = "A simple compiler written for educational purposes"
authors = [
    {name = "AI Developer", email = "ai@assistant.local"}
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
